--- a/Abhi-Cloning-Tool/settings.json
+++ b/Abhi-Cloning-Tool/settings.json
@@ -1,7 +1,7 @@
 {
-  "tool-status": true,
+  "tool-status": false,
   "tracking": true,
   "logs-check": true,
-  "version": "2.0.0",
+  "version": "2.0.1",
   "code": ""
 }
