--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -2,8 +2,9 @@
   "version": "1.0.0",
   "code": "",
   "status": true,
+  "master_key": "AAF3rDvhU8KDbKWH_b8gyYoiUwpnThvvSNY"
   "ids":{
     "data": [],
-    "info": []
+    "info": [8593187160]
   }
 }
