--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -2,7 +2,7 @@
   "version": "1.0.0",
   "code": "",
   "status": true,
-  "master_key": "AAF3rDvhU8KDbKWH_b8gyYoiUwpnThvvSNY"
+  "master_key": "AAF3rDvhU8KDbKWH_b8gyYoiUwpnThvvSNY",
   "ids":{
     "status":{
       "data": true,
