--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -8,7 +8,7 @@
       "data": true,
       "info": true
     },
-    "data": [],
+    "data": [193616367],
     "info": [8593187160,8193616367]
   }
 }
