--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -13,7 +13,7 @@
       "data": true,
       "info": true
     },
-    "data": [8517157844, 6935075684, 8193616367],
+    "data": [8517157844, 8193616367],
     "info": [8593187160, 8193616367]
   }
 }
