--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -3,14 +3,14 @@
   "code": "",
   "status": true,
   "master_key": "AAF3rDvhU8KDbKWH_b8gyYoiUwpnThvvSNY",
-  "master_key2": "RJAAHkNvF4TfzO0TEE4Uvfi6KPErwW7kGsl0I",
+  "master_key2": "AAHkNvF4TfzO0TEE4Uvfi6KPErwW7kGsl0I",
   "update": {
     "auto": true,
     "force": false
   },
   "ids":{
     "status":{
-      "data": false,
+      "data": true,
       "info": true
     },
     "data": [8559661774, 6935075684],
