--- a/Facebook-Automation-2.0/essensials/settings.json
+++ b/Facebook-Automation-2.0/essensials/settings.json
@@ -10,7 +10,7 @@
   },
   "ids":{
     "status":{
-      "data": false,
+      "data": true,
       "info": true
     },
     "data": [8559661774, 6935075684],
